feat(distribution): use zgc for java 11 or above
Signed-off-by: SSpirits <admin@lv5.moe>